.vim/sonictemplate/yaml/snip-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    label: test-label
  finalizers: null
spec:
  terminationGracePeriodSeconds: 0
  containers:
  - name: test-container
    image: nginx
    ports:
    - containerPort: 80
    command: [ "sh", "-c", "
      ln -sf /etc/hostname /usr/share/nginx/html/index.html;
      nginx -g 'daemon off;';
    "]
