.vim/sonictemplate/yaml/snip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    # nodePort: 30088
  selector:
    label: test-label
